@@ -1,14 +1,14 @@
 package org.mdkt.compiler;
 
-import java.util.List;
-import java.util.Map;
-
 import org.junit.Assert;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.ExpectedException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import java.util.List;
+import java.util.Map;
 
 public class InMemoryJavaCompilerTest {
 	private static final Logger logger = LoggerFactory.getLogger(InMemoryJavaCompilerTest.class);
@@ -18,7 +18,7 @@ public class InMemoryJavaCompilerTest {
 
 	@Test
 	public void compile_WhenTypical() throws Exception {
-		StringBuffer sourceCode = new StringBuffer();
+		StringBuilder sourceCode = new StringBuilder();
 
 		sourceCode.append("package org.mdkt;\n");
 		sourceCode.append("public class HelloClass {\n");
@@ -32,7 +32,7 @@ public class InMemoryJavaCompilerTest {
 
 	@Test
 	public void compile_WhenTypicalUpdateClass() throws Exception {
-		StringBuffer sourceCode = new StringBuffer();
+		StringBuilder sourceCode = new StringBuilder();
 
 		sourceCode.append("package org.mdkt.compiler;\n");
 		sourceCode.append("public class HelloClass {\n");
@@ -118,21 +118,21 @@ public class InMemoryJavaCompilerTest {
 
 	@Test
 	public void compile_WhenIgnoreWarnings() throws Exception {
-		StringBuffer sourceCode = new StringBuffer();
+		StringBuilder sourceCode = new StringBuilder();
 
 		sourceCode.append("package org.mdkt;\n");
 		sourceCode.append("public class HelloClass {\n");
 		sourceCode.append("   public java.util.List<String> hello() { return new java.util.ArrayList(); }");
 		sourceCode.append("}");
 		Class<?> helloClass = InMemoryJavaCompiler.newInstance().ignoreWarnings().compile("org.mdkt.HelloClass", sourceCode.toString());
-		List<?> res = (List<?>) helloClass.getMethod("hello").invoke(helloClass.newInstance());
+		List<?> res = (List<?>) helloClass.getMethod("hello").invoke(helloClass.getDeclaredConstructor().newInstance());
 		Assert.assertEquals(0, res.size());
 	}
 
 	@Test
 	public void compile_WhenWarningsAndErrors() throws Exception {
 		thrown.expect(CompilationException.class);
-		StringBuffer sourceCode = new StringBuffer();
+		StringBuilder sourceCode = new StringBuilder();
 
 		sourceCode.append("package org.mdkt;\n");
 		sourceCode.append("public class HelloClass extends xxx {\n");
@@ -145,4 +145,5 @@ public class InMemoryJavaCompilerTest {
 			throw e;
 		}
 	}
+
 }
